--- a/login-admin/package.json
+++ b/login-admin/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.2.13",
     "moongoose": "^0.0.5",
     "nodemailer": "^4.6.8",
+    "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.7.1"
   }
