--- a/server/lerna-repo/packages/project/package.json
+++ b/server/lerna-repo/packages/project/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "chartist": "^0.10.1",
         "create-react-app": "^1.3.3",
+        "cross-env": "^5.2.0",
         "d3-scale": "^1.0.6",
         "datatables.net-bs": "^1.10.16",
         "datatables.net-responsive": "^2.2.0",
@@ -36,11 +37,8 @@
         "wnumb": "^1.1.0"
     },
     "scripts": {
-        "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-        "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-        "start-js": "react-scripts start",
-        "start": "NODE_PATH=./src npm-run-all -p watch-css start-js",
-        "build": "npm run build-css && react-scripts build",
+        "start": "cross-env react-scripts start",
+        "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
     }
