--- a/server/lerna-repo/packages/account manage/package.json
+++ b/server/lerna-repo/packages/account manage/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "account",
+  "name": "account-manage",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "shinigami",
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "concurrently": "^4.0.1",
     "database": "^1.0.0",
-    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.14",
+    "jwt-decode": "^2.2.0",
+    "mongoose": "^5.2.15",
     "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "project": "^0.1.6",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "validator": "^10.7.1"
   }
 }
