--- a/server/lerna-repo/packages/server/package.json
+++ b/server/lerna-repo/packages/server/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "account": "^1.0.0",
+    "account-manage": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
@@ -17,6 +17,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.2.14",
     "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
