--- a/server/lerna-repo/packages/server/project/package.json
+++ b/server/lerna-repo/packages/server/project/package.json
@@ -3,7 +3,9 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
+        "axios": "^0.18.0",
         "chartist": "^0.10.1",
+        "classname": "0.0.0",
         "create-react-app": "^1.3.3",
         "cross-env": "^5.2.0",
         "d3-scale": "^1.0.6",
@@ -12,6 +14,7 @@
         "google-maps-react": "^1.1.0",
         "history": "^4.7.2",
         "jquery": "^3.2.1",
+        "jwt-decode": "^2.2.0",
         "moment": "^2.18.1",
         "moongoose": "^0.0.5",
         "node-sass-chokidar": "0.0.3",
@@ -27,6 +30,7 @@
         "react-datetime": "^2.10.2",
         "react-dom": "^15.6.1",
         "react-notification-system": "^0.2.15",
+        "react-redux": "^5.0.7",
         "react-router-dom": "^4.1.2",
         "react-scripts": "^1.0.10",
         "react-select": "^1.0.0-rc.10",
@@ -34,6 +38,8 @@
         "react-stepzilla": "^4.6.3",
         "react-syntax-highlighter": "^5.7.0",
         "react-tagsinput": "^3.18.0",
+        "redux": "^4.0.0",
+        "redux-thunk": "^2.3.0",
         "wnumb": "^1.1.0"
     },
     "scripts": {
@@ -41,5 +47,6 @@
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
-    }
+    },
+    "proxy": "http://localhost:5000"
 }
