--- a/server/lerna-repo/packages/package.json
+++ b/server/lerna-repo/packages/package.json
@@ -4,12 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "base": "npm install",
-    
-    "admin-module": "cd ./admin-module && npm run base",
-    "client-module": "cd ./client-project && npm run base",
-    "database-module": "cd ./database-module && npm run base",
-    "server-module": "cd ./server-module && npm run base",
+    "admin-module": "cd ./admin-module && npm install",
+    "client-module": "cd ./client-project && npm install",
+    "database-module": "cd ./database-module && npm install",
+    "server-module": "cd ./server-module && npm install",
 
     "link-modules": "npm run admin-module && npm run client-module && npm run database-module && npm run server-module"
   },
