--- a/mobile/PaymentOnline/android/app/build.gradle
+++ b/mobile/PaymentOnline/android/app/build.gradle
@@ -77,7 +77,6 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
-
 /**
  * Set this to true to create two separate APKs instead of one:
  *   - An APK that only works on ARM devices
@@ -141,6 +140,8 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-linear-gradient')
+    compile project(':react-native-vector-icons')
+
 }
 
 // Run this once to be able to run the application with BUCK
@@ -149,3 +150,11 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+// apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+
+// project.ext.vectoricons = [
+//     iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf' ] // Name of the font files you want to copy
+// ]
+
+// apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
