--- a/mobile/PaymentOnline/package.json
+++ b/mobile/PaymentOnline/package.json
@@ -7,9 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.8.0",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-animatable": "^1.3.0",
     "react-native-elements": "^1.0.0-beta5",
+    "react-native-keyboard-aware-scroll-view": "^0.7.2",
     "react-native-linear-gradient": "^2.4.2",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.17.0"
