--- a/mobile/PaymentOnline/package.json
+++ b/mobile/PaymentOnline/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "native-base": "^2.8.0",
     "react": "16.3.1",
     "react-native": "0.55.4",
@@ -15,7 +16,9 @@
     "react-native-keyboard-aware-scroll-view": "^0.7.2",
     "react-native-linear-gradient": "^2.4.2",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.17.0"
+    "react-navigation": "^2.17.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
