--- a/server/lerna-repo/packages/client/package.json
+++ b/server/lerna-repo/packages/client/package.json
@@ -16,6 +16,8 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.0.8",
+    "admin_module": "1.0.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
     "classnames": "^2.2.6",
@@ -31,11 +33,15 @@
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.5.2",
     "react-loadable": "^5.5.0",
+    "react-redux": "^5.0.7",
     "react-router-config": "^4.4.0-beta.1",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.5.2",
     "reactstrap": "^6.5.0",
-    "simple-line-icons": "^2.4.1"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "simple-line-icons": "^2.4.1",
+    "transaction_module": "1.0.0"
   },
   "devDependencies": {
     "babel-jest": "^23.6.0",
@@ -54,6 +60,7 @@
     "test:debug": "react-scripts --inspect-brk test --runInBand",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000",
   "bugs": {
     "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
   },
