--- a/mobile/PaymentOnline/package.json
+++ b/mobile/PaymentOnline/package.json
@@ -18,7 +18,8 @@
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.17.0",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
