--- a/mobile/test/android/app/build.gradle
+++ b/mobile/test/android/app/build.gradle
@@ -147,6 +147,7 @@ dependencies {
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-svg')
+    implementation group: 'com.google.zxing', name: 'core', version: '3.3.0'
 }
 
 // Run this once to be able to run the application with BUCK
