--- a/mobile/test/android/build.gradle
+++ b/mobile/test/android/build.gradle
@@ -9,11 +9,12 @@ buildscript {
         supportLibVersion = "27.1.1"
     }
     repositories {
-        jcenter()
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
+        // classpath 'com.android.gms:google-services:4.0.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,16 +23,18 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         mavenLocal()
-        jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
-        google()
+        maven {
+            url "https://maven.google.com/"
+        }       
+        jcenter() 
     }
 }
-
 
 task wrapper(type: Wrapper) {
     gradleVersion = '4.4'
