Fix: login when clear database

--- a/mobile/test/android/app/build.gradle
+++ b/mobile/test/android/app/build.gradle
@@ -142,7 +142,7 @@ android {
 }
 
 dependencies {
-    compile project(':realm')
+    implementation project(':realm')
     implementation project(':react-native-camera')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
