--- a/mobile/test/android/app/build.gradle
+++ b/mobile/test/android/app/build.gradle
@@ -142,6 +142,8 @@ android {
 }
 
 dependencies {
+    
+    implementation project(':react-native-firebase')
     implementation project(':realm')
     implementation project(':react-native-camera')
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -150,6 +152,9 @@ dependencies {
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-vector-icons')
     implementation group: 'com.google.zxing', name: 'core', version: '3.3.0'
+    // firebase for android
+    implementation "com.google.android.gms:play-services-base:16.0.1"
+    implementation "com.google.firebase:firebase-core:16.0.4"
 
 }
 
@@ -159,3 +164,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+apply plugin: 'com.google.gms.google-services'
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
