--- a/mobile/test/android/app/build.gradle
+++ b/mobile/test/android/app/build.gradle
@@ -142,6 +142,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-device-info')
     implementation project(':react-native-background-timer')
     implementation project(':react-native-firebase')
     implementation project(':realm')
@@ -156,6 +157,8 @@ dependencies {
     implementation "com.google.android.gms:play-services-base:16.0.1"
     implementation "com.google.firebase:firebase-core:16.0.6"
     implementation "com.google.firebase:firebase-database:16.0.4"
+    // implementation "com.google.firebase:firebase-messing:17.3.4"
+    // implementation "me.leolin:ShortcutBadger:1.1.21@aar"
 }
 
 // Run this once to be able to run the application with BUCK
