--- a/mobile/test/android/app/src/main/AndroidManifest.xml
+++ b/mobile/test/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <!-- <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" android:required="false" />
@@ -14,19 +14,20 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
+      android:launchMode="singleTop"
       android:theme="@style/AppTheme">
-<!--       
+
       <service android:name="io.invertase.firebase.messaging.RNFirebaseMessagingService">
         <intent-filter>
-          <action android:name="com.google.firebase.MESSAGE_EVENT" />
+          <action android:name="com.google.firebase.MESSAGING_EVENT" />
         </intent-filter>
       </service>
-      <service android:name="io.invertase.firebase.messaging.RNFirebaseInstanceService">
+      <service android:name="io.invertase.firebase.messaging.RNFirebaseInstanceIdService">
         <intent-filter>
           <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
         </intent-filter>
       </service>
-      <service android:name="io.invertase.firebase.messaging.RNFirebaseBackgroundMessagingService" /> -->
+      <service android:name="io.invertase.firebase.messaging.RNFirebaseBackgroundMessagingService" />
 
       <activity
         android:name=".MainActivity"
