--- a/mobile/test/android/app/build.gradle
+++ b/mobile/test/android/app/build.gradle
@@ -142,6 +142,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-picker')
     implementation project(':react-native-device-info')
     implementation project(':react-native-background-timer')
     implementation project(':react-native-firebase')
