--- a/mobile/test/android/app/build.gradle
+++ b/mobile/test/android/app/build.gradle
@@ -159,6 +159,8 @@ dependencies {
     implementation "com.google.firebase:firebase-database:16.0.4"
     implementation "com.google.firebase:firebase-messaging:17.3.4"
     implementation "me.leolin:ShortcutBadger:1.1.21@aar"
+    implementation 'com.facebook.fresco:fresco:1.10.0'
+    implementation 'com.facebook.fresco:animated-gif:1.10.0'
 }
 
 // Run this once to be able to run the application with BUCK
